installation via curl

--- a/README.html
+++ b/README.html
@@ -343,7 +343,7 @@ https://github.com/oh-my-fish/oh-my-fish
 https://github.com/rcaloras/bashhub-client
 </code></pre>
 <h3 id="installation">Installation</h3>
-<p><code>curl https://github.com/MoonLightElf/zsh-plugin-setup/raw/main/zsh-plugin-setup.sh | zsh</code></p>
+<p><code>curl -OL  https://github.com/MoonLightElf/zsh-plugin-setup/raw/main/zsh-plugin-setup.sh | zsh</code></p>
 <h3 id="why-do-we-use-these-zsh-plugins">Why do we use these zsh plugins?</h3>
 <p>Zsh is mainly compatible with bash. One of the compatibility issues we know is that bash supports wild char in commands. For example, &quot;apt install compiz*&quot;. Zsh does not.</p>
 <p>The autosuggestion feature of fish is &quot;friendly interactive&quot;. Marlonrichert and contributors implement the autocomplete feature for zsh, and it provides more detailed information than fish does. Fizsh is not so sophisticated. Cantino/mcfly only searches in history.</p>
